...
        NavigationBarItem(
            icon = { Icon(Icons.Default.Dashboard, contentDescription = "") },
            label = { Text("DashBoard") },
            onClick = { nav.navigate("dashboard") },
            selected = telaAtual == "dashboard",
            enabled = telaAtual != "dashboard",
            modifier = Modifier.testTag("BtnProf")
        )
        NavigationBarItem(
            icon = { Icon(Icons.Default.People, contentDescription = "") },
            label = { Text("Professores") },
            onClick = { nav.navigate("professor") },
            selected = telaAtual == "prof",
...
